--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -96,6 +96,9 @@ p {
       margin: 0;
       font-weight: bold;
       font-size: $back-bar-title-font-size;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
 } } }
 
 .company-info {
@@ -290,7 +293,12 @@ p {
     }
   }
 
+  .item.category td {
+    vertical-align: middle; 
+  }
+
   .item td {
+    vertical-align: top;
     padding: 8px 6px 8px 0px;
     font-size: 16px;
 
