--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -365,7 +365,7 @@ div.wysiwyg ul.toolbar {
 
 .wphoto-wrap {
   width: 100%;
-  border: 1px dashed #515053;
+  border: 1px solid #BDC7D8;
   margin: 10px 0;
   padding: 5px; }
   .wphoto-wrap label {
@@ -396,7 +396,7 @@ div.wysiwyg ul.toolbar {
   clear: left; }
 
 #dialog-confirm .wphoto-wrap {
-  border: none; }
+  padding: 0px 4px 0px 4px; }
 
 #builder .edit-area.hours .double-time-input {
   margin: 30px 0px 10px 0px; }
