--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -250,13 +250,10 @@ p {
     max-width: 80px; }
     .page > .content.category .img-col img, .page > .content.page_tree .img-col img {
       /* Optional rounded corners for browsers that support it */
-      -moz-border-radius: 0px;
-      -webkit-border-radius: 0px;
-      -khtml-border-radius: 0px;
-      border-radius: 0px;
-      -moz-box-shadow: 0 0 5px #888;
-      -webkit-box-shadow: 0 0 5px#888;
-      box-shadow: 0 0 5px #888; }
+      -moz-border-radius: 8px;
+      -webkit-border-radius: 8px;
+      -khtml-border-radius: 8px;
+      border-radius: 8px; }
   .page > .content.category .item.category td, .page > .content.page_tree .item.category td {
     vertical-align: middle; }
   .page > .content.category .item td, .page > .content.page_tree .item td {
@@ -337,14 +334,11 @@ pre {
   text-align: left; }
   .wphoto-large img {
     max-width: 100%;
-    margin: 0px 15px 15px 0px;
-    -moz-box-shadow: 0 0 5px #888;
-    -webkit-box-shadow: 0 0 5px#888;
-    box-shadow: 0 0 5px #888;
-    -moz-border-radius: 0px;
-    -webkit-border-radius: 0px;
-    -khtml-border-radius: 0px;
-    border-radius: 0px; }
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -khtml-border-radius: 8px;
+    border-radius: 8px;
+    margin: 0px 15px 15px 0px; }
 
 .node-list .wphoto img {
   margin: 0px;
