--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -373,6 +373,10 @@
       | <% } %>
 
   script.category-page(type="text/template")
+    | <% if (_maybe.wphotoUrlLarge) { %>
+    .wphoto-large.centered
+      img src="{{ wphotoUrlLarge }}"
+    | <% } %>
     table.node-list
       tbody
         | <% for (var i=0; i<stuff.length;i++) {
