--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -393,6 +393,7 @@ pre {
     margin: 0px 15px 15px 0px;
   }
 }
+.wphoto-large.centered { text-align: center; float: none; }
 
 .node-list {
   .wphoto {
