--- a/public/stylesheets/sass/signup.scss
+++ b/public/stylesheets/sass/signup.scss
@@ -351,6 +351,10 @@ label {
 .marketing-copy {
   p {
     font-size:14px;
+    margin-bottom: 4px;
+  }
+  .line-3 { 
+    margin-bottom: 8px; 
   }
   ul {
     font-size:14px;
@@ -359,6 +363,7 @@ label {
   }
   li {
     padding-top: 3px;
+    padding-left: 8px;
     margin-top:0px;
   }
 }
