--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -297,11 +297,15 @@ label {
   text-align: center; }
 
 .marketing-copy p {
-  font-size: 14px; }
+  font-size: 14px;
+  margin-bottom: 4px; }
+.marketing-copy .line-3 {
+  margin-bottom: 8px; }
 .marketing-copy ul {
   font-size: 14px;
   margin-top: -1px;
   list-style-image: url(/images/checkmark-2.png); }
 .marketing-copy li {
   padding-top: 3px;
+  padding-left: 8px;
   margin-top: 0px; }
