--- a/public/stylesheets/sass/signup.scss
+++ b/public/stylesheets/sass/signup.scss
@@ -359,11 +359,11 @@ label {
   ul {
     font-size:14px;
     margin-top: -1px;
+    line-height: 24px;
     list-style-image: url(/images/checkmark-2.png);
   }
   li {
-    padding-top: 3px;
-    padding-left: 8px;
+    padding-left: 6px;
     margin-top:0px;
   }
 }
