--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -304,8 +304,8 @@ label {
 .marketing-copy ul {
   font-size: 14px;
   margin-top: -1px;
+  line-height: 24px;
   list-style-image: url(/images/checkmark-2.png); }
 .marketing-copy li {
-  padding-top: 3px;
-  padding-left: 8px;
+  padding-left: 6px;
   margin-top: 0px; }
