--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -35,7 +35,7 @@
         .wtab
           h3 = "Tab \##{ n+2 }"
           select name="wtab_1" data-idx="#{ n }"
-            option = "==None=="
+            option value="__none__" = "==None=="
             | <%
             = "var tabIdx = #{ n };"
             | for (var i=0; i<widgetVals.length; i++) {
