--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -145,11 +145,11 @@
         td.go-home
           a href="#" Home
         td.wtab data-wid="{{ wids[0] }}"
-          div {{ wtabNames[0] }}
+          div {{ wnames[0] }}
         td.wtab data-wid="{{ wids[1] }}"
-          div {{ wtabNames[1] }}
+          div {{ wnames[1] }}
         td.wtab data-wid="{{ wids[2] }}"
-          div {{ wtabNames[2] }}
+          div {{ wnames[2] }}
 
   script.widget-page(type="text/template")
     .page
