--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -384,6 +384,7 @@ pre {
 .wphoto-large {
   float: left;
   text-align: left;
+  width: 100%;
   img {
     max-width: 100%;
     margin: 0px 15px 15px 0px;
