--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -280,6 +280,10 @@ p {
     width: 100%;
   }
 
+  .category .txt-col {
+    padding-right: 16px;
+  }
+
   td.img-col {
     width: 10%;
     max-width: 80px;
