Fixed ie7 specific styling bug. Closes #58

--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -12,6 +12,10 @@ html lang="en-US"
     = stylesheet_link_tag 'builder-app'
     = stylesheet_link_tag 'flick/jquery-ui-1.8.11.custom'
     = stylesheet_link_tag 'jquery.wysiwyg'
+    erb:
+      <!--[if IE 7]>
+      <%= stylesheet_link_tag 'ie' %>
+      <![endif]-->
     = csrf_meta_tag
   body
     = topline_notice
