--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -339,7 +339,8 @@ p {
     margin: 0; }
   }
   .separator {
-    border-top: 1px solid #b3b3b3;
+    background: #b3b3b3;
+    height: 1px;
   }
 
 .page > .content.category {
