Updated padding in pick_files button to make it look better in IE7

--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -593,4 +593,5 @@ div.plupload {
     cursor: pointer; }
 
 button[name=pick_files] {
-  cursor: pointer; }
+  cursor: pointer;
+  padding: 1px 3px 1px 3px; }
