--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -338,17 +338,25 @@ pre {
   float: left;
   text-align: left;
   width: 100%; }
-  .wphoto-large img {
-    max-width: 100%;
-    margin: 0px 15px 15px 0px;
-    -moz-border-radius: 0px;
-    -webkit-border-radius: 0px;
-    -khtml-border-radius: 0px;
-    border-radius: 0px; }
+  
+.wphoto-large img {
+  max-width: 100%;
+  margin: 0px 15px 15px 0px;
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 0px;
+  -khtml-border-radius: 0px;
+  border-radius: 0px; 
+}
 
 .wphoto-large.centered {
   text-align: center;
-  float: none; }
+  float: none; 
+  border-bottom: solid 1px #1D4088;
+}
+
+.wphoto-large.centered img {
+    margin-bottom: 6px;
+}
 
 .node-list .wphoto img {
   margin: 0px;
