--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -402,6 +402,7 @@
       img src="{{ wphotoUrlLarge }}"
     | <% } %>
     .leaf-content {{ content }}
+    .clearfix
 
   / =====================
   / = Widget Edit Pages =
