--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -291,8 +291,6 @@ p {
   .page > .content.category .separator, .page > .content.page_tree .separator {
     background: #b3b3b3;
     height: 1px; }
-  .page > .content.category .leaf-content, .page > .content.page_tree .leaf-content {
-    clear: both; }
 
 .page > .content.category .name {
   float: left;
@@ -336,27 +334,19 @@ pre {
 
 .wphoto-large {
   float: left;
-  text-align: left;
-  width: 100%; }
-  
-.wphoto-large img {
-  max-width: 100%;
-  margin: 0px 15px 15px 0px;
-  -moz-border-radius: 0px;
-  -webkit-border-radius: 0px;
-  -khtml-border-radius: 0px;
-  border-radius: 0px; 
-}
+  text-align: left; }
+  .wphoto-large img {
+    max-width: 100%;
+    margin: 0px 15px 15px 0px;
+    -moz-border-radius: 0px;
+    -webkit-border-radius: 0px;
+    -khtml-border-radius: 0px;
+    border-radius: 0px; }
 
 .wphoto-large.centered {
   text-align: center;
-  float: none; 
-  border-bottom: solid 1px #1D4088;
-}
-
-.wphoto-large.centered img {
-    margin-bottom: 6px;
-}
+  float: none;
+  width: 100%; }
 
 .node-list .wphoto img {
   margin: 0px;
