Added styling for button[disabled] so it will look better in IE7/IE8

--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -592,6 +592,9 @@ div.plupload {
   div.plupload input {
     cursor: pointer; }
 
+button[disabled] {
+  padding: 1px 3px 1px 3px; }
+
 button[name=pick_files] {
   cursor: pointer;
   padding: 1px 3px 1px 3px; }
