--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -334,7 +334,8 @@ pre {
 
 .wphoto-large {
   float: left;
-  text-align: left; }
+  text-align: left;
+  max-width: 100%; }
   .wphoto-large img {
     max-width: 100%;
     margin: 0px 15px 15px 0px;
@@ -346,7 +347,11 @@ pre {
 .wphoto-large.centered {
   text-align: center;
   float: none;
-  width: 100%; }
+  width: 100%;
+  border-bottom: 1px solid #1D4088; }
+
+.wphoto-large.centered img {
+  margin-bottom: 6px; }
 
 .node-list .wphoto img {
   margin: 0px;
