Added entry for .selected-file to set cursor to pointer.

--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -592,6 +592,11 @@ div.plupload {
   div.plupload input {
     cursor: pointer; }
 
+.selected-file {
+  cursor: pointer; }
+  .selected-file button {
+    cursor: pointer; }
+
 button[disabled] {
   padding: 1px 3px 1px 3px; }
 
