--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -282,6 +282,10 @@ p {
 
   .category .txt-col {
     padding-right: 16px;
+    .preview-text {
+      font-size: 12px;
+      padding-top: 4px;
+    }
   }
 
   td.img-col {
