--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -248,8 +248,10 @@ p {
   .page > .content.category .category .txt-col, .page > .content.page_tree .category .txt-col {
     padding-right: 16px; }
     .page > .content.category .category .txt-col .preview-text, .page > .content.page_tree .category .txt-col .preview-text {
-      font-size: 12px;
-      padding-top: 4px; }
+      font-size: 70%;
+      padding-top: 4px;
+      max-height: 4em;
+      overflow: hidden; }
   .page > .content.category td.img-col, .page > .content.page_tree td.img-col {
     width: 10%;
     max-width: 80px;
