--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -283,8 +283,10 @@ p {
   .category .txt-col {
     padding-right: 16px;
     .preview-text {
-      font-size: 12px;
+      font-size: 70%;
       padding-top: 4px;
+      max-height: 4em;
+      overflow: hidden;
     }
   }
 
