--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -76,6 +76,10 @@ input[type=checkbox] {
   border: 1px solid #ccc;
 }
 
+.list-mode-wrap {
+  padding-bottom: 6px;
+}
+
 label {
   display: inline-block;
   font-size: $font-size-label;
