Updated max-height from 4em to 3.5em

--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -285,8 +285,9 @@ p {
     .preview-text {
       font-size: 70%;
       padding-top: 4px;
-      max-height: 4em;
+      max-height: 3.5em;
       overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 
