Updated font size in .preview-text to make it work better with the max-height.

--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -283,7 +283,7 @@ p {
   .category .txt-col {
     padding-right: 16px;
     .preview-text {
-      font-size: 70%;
+      font-size: 12px;
       padding-top: 4px;
       max-height: 3.5em;
       overflow: hidden;
