--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -248,7 +248,7 @@ p {
   .page > .content.category .category .txt-col, .page > .content.page_tree .category .txt-col {
     padding-right: 16px; }
     .page > .content.category .category .txt-col .preview-text, .page > .content.page_tree .category .txt-col .preview-text {
-      font-size: 70%;
+      font-size: 12px;
       padding-top: 4px;
       max-height: 3.5em;
       overflow: hidden;
