--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -293,7 +293,8 @@ div.wysiwyg ul.toolbar {
 }
 
 #builder .follower-section {
-  margin: 0 0 10px 10px; }
+  padding: 0 0 10px 10px;
+}
 
 #emulator-wrapper {
   float: left;
