Util code structure refactoring.
This provides a very minor speed upgrade to visiting mobile yomobi pages.

--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -46,7 +46,7 @@ html lang="en-US"
     = javascript_include_tag 'support/dbx'
     = javascript_include_tag 'support/underscore'
     = javascript_include_tag 'support/backbone'
-    = javascript_include_tag 'util'
+    = javascript_include_tag 'util', 'builder.util'
     = render :partial => 'shared/data-loader' if @company
     = javascript_include_tag 'preview-mobile'
     
