--- a/app/views/builder/index.slim
+++ b/app/views/builder/index.slim
@@ -9,6 +9,7 @@
   
   = javascript_include_tag 'support/jquery.wysiwyg'
   = javascript_include_tag 'support/jquery.wysiwyg.link'
+  = javascript_include_tag 'support/jquery.wysiwyg.image'
 
 h1 = @company.name
 #builder-container
