--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -536,6 +536,11 @@ div.wysiwyg ul.toolbar {
 #dialog-confirm.edit-icon p {
   padding: 4px 0px 0px 0px; }
 
+#dialog-confirm.jeditor-image img {
+  max-width: 100%;
+  max-height: 80px;
+  vertical-align: middle; }
+
 #builder input[name="back"] {
   margin-right: 16px;
   padding: 4px;
