--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -608,6 +608,10 @@ div.wysiwyg ul.toolbar {
 
 }
 
+#dialog-confirm.jeditor-image {
+  img { max-width: 100%; max-height: 80px; vertical-align: middle; }
+}
+
 #builder input[name="back"] {
   margin-right:16px;
   padding:4px;
