--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -381,6 +381,12 @@ div.wysiwyg ul.toolbar {
     top: 3px;
     left: 4px; }
 
+.wphoto-wrap.preview td:first-child {
+  text-align: center;
+  width: 80%; }
+.wphoto-wrap.preview button {
+  cursor: pointer; }
+
 .wphoto-wrap .selected-file {
   width: 120px;
   height: 1.25em;
