--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -147,11 +147,15 @@ p {
 .ad-bar {
   display: none;
   padding: 0 0;
-  border-bottom: 2px solid $secondary-color;
+  //border-bottom: 2px solid $secondary-color;
+  border-bottom: 0px;
   background: $color-topbar;
   text-align: center;
   &.bottom {
-    height: 48px; } }
+    //height: 48px;
+    height: 0px;
+    visible: false;
+  } }
 
 .back-btn {
   float: left;
